# bi-analytics-backend

./: .env.local  .gitignore  .pre-commit-config.yaml  DEPLOYMENT_GUIDE.md  Makefile  README.md  apache-vhosts.conf  pyproject.toml  requirements.txt
analytics/: urls.py
analytics/models/: __init__.py  active_trading_codes.py  base.py  branch_performance.py  business_trade_management.py  customer_management.py  daily_net_fundflow.py  daily_trade_performance.py  financial_information.py  lov.py  margin_loan_usage.py  portfolio_management_status.py  regional_business_performance.py  rmwise_performance.py  rmwise_portfolio.py
analytics/orm/: __init__.py  active_trading_codes.py  branch_performance.py  business_trade_management.py  customer_management.py  daily_trade_performance.py  financial_information.py  lov.py  margin_loan_usage.py  portfolio_management.py  regional_business_performance.py  rmwise_daily_trade_performance.py  rmwise_performance.py  rmwise_portofolio.py
analytics/serializers/: __init__.py  lov.py
analytics/views/: __init__.py  active_trading_codes.py  branch_performance.py  branch_performance_process.py  business_trade_management.py  customer_management.py  daily_trade_performance.py  dse_api.py  excels.py  financial_information.py  lov.py  margin_loan_usage.py  portfolio_management.py  regional_business_performance.py  rm_performance.py  rm_portfolio.py  rmwise_daily_trade_performance.py  utils.py
authusers/: admin.py  apps.py  filter.py  filters.py  managers.py  models.py  serializers.py  signals.py  urls.py  views.py
authusers/migrations/: 0001_initial.py  0002_trader_alter_user_managers_alter_user_role_and_more.py  0003_alter_role_codename_alter_role_viewname.py  0004_user_role_fk.py
bi_menu/: admin.py  apps.py  models.py  serializers.py  views.py
bi_menu/migrations/: 0001_initial.py  0002_menu_is_active.py  0003_alter_menu_parent_menu.py
core/: constants.py  helper.py  permissions.py  renderer.py  settings.py  urls.py
core/metadata/openapi/: __init__.py  configs.py
core/mixins/: __init__.py  model_mixin.py
db/: __init__.py
