[project]
name = "bi-analytics-backend"
version = "0.1.0"
description = "analytics backend with django"
readme = "README.md"
requires-python = ">=3.13"
authors = ["jiaulislam <jiaulislam.ict.bd@gmail.com>"]
dependencies = [
    "django",
    "djangorestframework",
    "djangorestframework-camel-case",
    "django-cors-headers",
    "sqlalchemy",
    "pydantic",
    "gunicorn",
    "drf-spectacular",
    "mssql-django",
    "python-decouple",
    "djangorestframework-simplejwt",
    "django-filter",
    "pillow",
    "pandas",
    "werkzeug>=3.1.3",
    "django-extensions>=3.2.3",
]

[tool.uv]
dev-dependencies = [
    "black>=24.10.0",
    "devtools>=0.12.2",
    "django-extensions>=3.2.3",
    "pre-commit>=4.0.1",
    "ruff>=0.7.4",
]


[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
atomic = true
profile = "black"
line_length = 88
skip_gitignore = true
skip_glob = ["tests/data", "profiling"]
known-third-party = [
    "django",
    "django-cors-headers",
    "djangorestframework",
    "djangorestframework-simplejwt",
    "drf-spectacular",
    "python-decouple",
    "djangorestframework-camel-case",
]

[tool.ruff]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "N",   # pep8-naming
    "T20", # flake8-print
]

ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
]

extend-exclude = [".pyenv", ".vscode", "/usr/**", ".venv/**"]
